2018-01-04  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2017-11-03  Jeff Law  <law@redhat.com>

	* config/i386/i386.c (ix86_emit_restore_reg_using_pop): Prototype.
	(ix86_adjust_stack_and_probe_stack_clash): Use a push/pop sequence
	to probe at the start of a noreturn function.

	* config/i386/i386.c (ix86_expand_prologue): Tighten assert
	for int_registers_saved.

	2017-09-25  Jeff Law  <law@redhat.com>

	* config/rs6000/rs6000-protos.h (output_probe_stack_range): Update
	prototype for new argument.
	* config/rs6000/rs6000.c (rs6000_emit_allocate_stack_1): New function,
	mostly extracted from rs6000_emit_allocate_stack.
	(rs6000_emit_probe_stack_range_stack_clash): New function.
	(rs6000_emit_allocate_stack): Call
	rs6000_emit_probe_stack_range_stack_clash as needed.
	(rs6000_emit_probe_stack_range): Add additional argument
	to call to gen_probe_stack_range{si,di}.
	(output_probe_stack_range): New.
	(output_probe_stack_range_1): Renamed from output_probe_stack_range.
	(output_probe_stack_range_stack_clash): New.
	(rs6000_emit_prologue): Emit notes into dump file as requested.
	* rs6000.md (allocate_stack): Handle -fstack-clash-protection.
	(probe_stack_range<P:mode>): Operand 0 is now early-clobbered.
	Add additional operand and pass it to output_probe_stack_range.
    
	2017-09-21  Jeff Law  <law@redhat.com>

	* config/i386/i386.c (ix86_adjust_stack_and_probe_stack_clash):
	Fix dump output if the only stack space is for pushed registers.

	2017-09-20  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
		    Jeff Law  <law@redhat.com>

	* config/s390/s390.c (MIN_UNROLL_PROBES): Define.
	(allocate_stack_space): New function, partially extracted from
	s390_emit_prologue.
	(s390_emit_prologue): Track offset to most recent stack probe.
	Code to allocate space moved into allocate_stack_space.
	Dump actions when no stack is allocated.
	(s390_prologue_plus_offset): New function.
	(s390_emit_stack_probe): Likewise.

	2017-09-20  Jeff Law  <law@redhat.com>
